<resources>
    <string name="app_name">Mob Connect</string>
    <string name="activity_loader_textview">Chargement</string>
    <string name="fragment_config_server_title_textview">Configuration du\nMobil\'Home</string>
    <string name="fragment_config_serveur_ip_edittext">IP du serveur</string>
    <string name="fragment_config_server_validate_btn">Configurer</string>

    <!-- Error -->
    <string name="error_default">Une erreur est survenue</string>
    <string name="error_server_ip_empty">Merci de saisir une adresse IP</string>
    <string name="fragment_home_title_textview">Mon bureau</string>

    <!-- Sensors -->
    <string name="sensor_default">N/A</string>
    <string name="sensor_temperature">Température</string>
    <string name="sensor_brightness">Luminosité</string>
    <string name="sensor_light">Lumière</string>
    <string name="sensor_pressure">Pression</string>
    <string name="sensor_motion">Mouvement</string>

    <string name="fragment_sensor_brightness_values_temperature_title_textview">Température</string>
    <string name="fragment_sensor_brightness_values_humidity_title_textview">Humidité</string>
    <string name="fragment_sensor_brightness_card_title_textview">Actuellellement il fait :</string>
    <string name="fragment_sensor_pressure_card_title_textview">Actuellellement le capteur de pression retourne l\'état : </string>
    <string name="fragment_sensor_motion_detect">Actuellement il y a du mouvement dans la pièce</string>
    <string name="fragment_sensor_motion_no_detect">Aucun mouvement detecté dans la pièce</string>
    <string name="fragment_sensor_motion_last_detection">Dernière détection :</string>
    <string name="fragment_sensor_light_led_red_title_textview">LED Rouge</string>
    <string name="fragment_sensor_light_led_green_title_textview">LED Verte</string>
    <string name="light_state_turn_on">Allumée</string>
    <string name="light_state_turn_off">Éteinte</string>
</resources>
