<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/app_background_light">

    <android.support.constraint.Guideline
        android:id="@+id/fragment_sensor_light__vertical_center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/fragment_sensor_light__vertical_left_25_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/fragment_sensor_light__vertical_right_25_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:id="@+id/fragment_sensor_light__horizontal_top_10_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <android.support.constraint.Guideline
        android:id="@+id/fragment_sensor_light__horizontal_top_40_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <android.support.constraint.Guideline
        android:id="@+id/fragment_sensor_light__horizontal_center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/fragment_sensor_light__imageview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_sensor_light__horizontal_top_10_guideline"
        app:layout_constraintStart_toStartOf="@+id/fragment_sensor_light__vertical_left_25_guideline"
        app:layout_constraintEnd_toEndOf="@+id/fragment_sensor_light__vertical_right_25_guideline"
        app:layout_constraintBottom_toTopOf="@+id/fragment_sensor_light__horizontal_top_40_guideline"
        android:src="@drawable/ic_sensor_light"/>

    <TextView
        android:id="@+id/fragment_sensor_light__textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/fragment_sensor_light__horizontal_top_40_guideline"
        app:layout_constraintLeft_toRightOf="@+id/fragment_sensor_light__vertical_left_25_guideline"
        app:layout_constraintRight_toLeftOf="@+id/fragment_sensor_light__vertical_right_25_guideline"
        android:textColor="@color/sensor_temperature_textview"
        android:textSize="30sp"
        android:text="@string/sensor_light"/>

    <android.support.v7.widget.CardView
        android:id="@+id/fragment_sensor_light__cardview"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/fragment_sensor_light__horizontal_center_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardBackgroundColor="@color/sensor_card_background"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/fragment_sensor_light__values_separator"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/sensor_card_separator_background"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/fragment_sensor_light_led_red_title_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/fragment_sensor_light_led_red_title_textview"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"
                app:layout_constraintEnd_toStartOf="@+id/fragment_sensor_light__values_separator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/fragment_sensor_light_led_red_state_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_sensor_light_led_red_title_textview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/fragment_sensor_light__values_separator"
                android:gravity="center"
                android:layout_margin="10dp"
                android:textSize="35dp"
                android:text="@string/light_state_turn_on"/>


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/fragment_sensor_light_led_green_title_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textColor="@android:color/holo_green_dark"
                android:text="@string/fragment_sensor_light_led_green_title_textview"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fragment_sensor_light__values_separator"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/fragment_sensor_light_led_green_state_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_sensor_light_led_green_title_textview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fragment_sensor_light__values_separator"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:layout_margin="10dp"
                android:textSize="35dp"
                android:text="@string/light_state_turn_off"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>